@@ -1,6 +1,7 @@
 == In Git
 
 === Bugfixes
+* Fixed incorrect indentation for descriptions in Java. (Aslak Hellesøy)
 * Fixed support for xx-yy languages and Hebrew and Indonesian (JDK bugs). (Aslak Hellesøy)
 
 == 2.0.1 (2010-06-15)
